make sure full page parallax goes behind everything

--- a/app/assets/stylesheets/components/parallax.css.scss
+++ b/app/assets/stylesheets/components/parallax.css.scss
@@ -17,6 +17,7 @@ $form-backdrop-parallax-height: 325px;
   &.full-page {
     bottom: 0;
     height: auto;
+    z-index: -200;
   }
 
   &.form-backdrop-parallax {
